--- a/ShareLockRevamp/ShareLockRevamp.csproj
+++ b/ShareLockRevamp/ShareLockRevamp.csproj
@@ -231,6 +231,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\AccentedButton.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\undraw_reading_time_gvg0.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\illustration.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
     Other similar extension points exist, see Microsoft.Common.targets.
